[gd_scene load_steps=76 format=3 uid="uid://q6npjg2amk33"]

[ext_resource type="Script" uid="uid://dxb3g2lim7knf" path="res://Scripts/golem.gd" id="1_0elug"]
[ext_resource type="Texture2D" uid="uid://crq170u8u5sq5" path="res://Health Icon en.png" id="2_0f4bk"]
[ext_resource type="PackedScene" uid="uid://ca7kl6j2bp3pb" path="res://Scenes/patrick_star.tscn" id="2_qu0d1"]
[ext_resource type="Texture2D" uid="uid://dt2lcgavq20iu" path="res://Health Icon Bar 1.png" id="3_5lrdn"]
[ext_resource type="Script" uid="uid://c6a4qac0f7bm0" path="res://Scripts/orc_state_machine.gd" id="4_xho7s"]
[ext_resource type="Script" uid="uid://ddwvccfgrpifm" path="res://Scripts/orc_idle.gd" id="5_2bw08"]
[ext_resource type="Script" uid="uid://5huh6gjtjjrp" path="res://Scripts/golem_attack.gd" id="7_0elug"]
[ext_resource type="Script" uid="uid://cclkchnots7wv" path="res://Scripts/golem_chase.gd" id="8_qu0d1"]
[ext_resource type="Script" uid="uid://nrshks2drk03" path="res://Scripts/orc_death.gd" id="8_s6gu0"]
[ext_resource type="Script" uid="uid://dv1qbrxeuq268" path="res://Scripts/orc_taunt.gd" id="10_ks78l"]
[ext_resource type="Texture2D" uid="uid://cp3tjoqw83ix8" path="res://Golem_1/Blue/White_Swoosh_VFX/Golem_1_attack.png" id="11_qu0d1"]
[ext_resource type="Texture2D" uid="uid://c8j44687rg78c" path="res://Golem_1/Blue/White_Swoosh_VFX/Golem_1_die.png" id="12_15x5q"]
[ext_resource type="Texture2D" uid="uid://be0jd7ult8chx" path="res://Golem_1/Blue/White_Swoosh_VFX/Golem_1_idle.png" id="13_0f4bk"]
[ext_resource type="Texture2D" uid="uid://bes538pbnjdgl" path="res://Golem_1/Blue/White_Swoosh_VFX/Golem_1_walk.png" id="14_5lrdn"]
[ext_resource type="Script" uid="uid://ncg2ufgsak57" path="res://Scripts/HealthComponentenmy.gd" id="17_080x1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_55ma6"]
bg_color = Color(0.490196, 0.227451, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7nrbs"]
bg_color = Color(0.862745, 0.286275, 0.286275, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_xho7s"]
atlas = ExtResource("11_qu0d1")
region = Rect2(0, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bw08"]
atlas = ExtResource("11_qu0d1")
region = Rect2(90, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sg0sd"]
atlas = ExtResource("11_qu0d1")
region = Rect2(180, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6v8k"]
atlas = ExtResource("11_qu0d1")
region = Rect2(270, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6gu0"]
atlas = ExtResource("11_qu0d1")
region = Rect2(360, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sr4wm"]
atlas = ExtResource("11_qu0d1")
region = Rect2(450, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ks78l"]
atlas = ExtResource("11_qu0d1")
region = Rect2(540, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vj27"]
atlas = ExtResource("11_qu0d1")
region = Rect2(630, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_leecd"]
atlas = ExtResource("11_qu0d1")
region = Rect2(720, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cich2"]
atlas = ExtResource("11_qu0d1")
region = Rect2(810, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xv12"]
atlas = ExtResource("11_qu0d1")
region = Rect2(900, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uilfx"]
atlas = ExtResource("12_15x5q")
region = Rect2(0, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmpxl"]
atlas = ExtResource("12_15x5q")
region = Rect2(90, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_080x1"]
atlas = ExtResource("12_15x5q")
region = Rect2(180, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4lq5"]
atlas = ExtResource("12_15x5q")
region = Rect2(270, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1j1nh"]
atlas = ExtResource("12_15x5q")
region = Rect2(360, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vvae"]
atlas = ExtResource("12_15x5q")
region = Rect2(450, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2e1yn"]
atlas = ExtResource("12_15x5q")
region = Rect2(540, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tldu3"]
atlas = ExtResource("12_15x5q")
region = Rect2(630, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aif77"]
atlas = ExtResource("12_15x5q")
region = Rect2(720, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkqj4"]
atlas = ExtResource("12_15x5q")
region = Rect2(810, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvbyd"]
atlas = ExtResource("12_15x5q")
region = Rect2(900, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xyjp3"]
atlas = ExtResource("12_15x5q")
region = Rect2(990, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_616ib"]
atlas = ExtResource("13_0f4bk")
region = Rect2(0, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpecc"]
atlas = ExtResource("13_0f4bk")
region = Rect2(90, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_87bhp"]
atlas = ExtResource("13_0f4bk")
region = Rect2(180, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8knud"]
atlas = ExtResource("13_0f4bk")
region = Rect2(270, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_imoji"]
atlas = ExtResource("13_0f4bk")
region = Rect2(360, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2syoc"]
atlas = ExtResource("13_0f4bk")
region = Rect2(450, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xe2n0"]
atlas = ExtResource("13_0f4bk")
region = Rect2(540, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8qb6"]
atlas = ExtResource("13_0f4bk")
region = Rect2(630, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4cej"]
atlas = ExtResource("14_5lrdn")
region = Rect2(0, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ooek5"]
atlas = ExtResource("14_5lrdn")
region = Rect2(90, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ihds"]
atlas = ExtResource("14_5lrdn")
region = Rect2(180, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_63rc5"]
atlas = ExtResource("14_5lrdn")
region = Rect2(270, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsb36"]
atlas = ExtResource("14_5lrdn")
region = Rect2(360, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wveln"]
atlas = ExtResource("14_5lrdn")
region = Rect2(450, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m55n3"]
atlas = ExtResource("14_5lrdn")
region = Rect2(540, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qp10"]
atlas = ExtResource("14_5lrdn")
region = Rect2(630, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0p1u"]
atlas = ExtResource("14_5lrdn")
region = Rect2(720, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_03twl"]
atlas = ExtResource("14_5lrdn")
region = Rect2(810, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_15x5q"]
atlas = ExtResource("11_qu0d1")
region = Rect2(0, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0f4bk"]
atlas = ExtResource("11_qu0d1")
region = Rect2(90, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lrdn"]
atlas = ExtResource("11_qu0d1")
region = Rect2(180, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifsd4"]
atlas = ExtResource("11_qu0d1")
region = Rect2(270, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrni1"]
atlas = ExtResource("11_qu0d1")
region = Rect2(360, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6jpq"]
atlas = ExtResource("11_qu0d1")
region = Rect2(450, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_avvui"]
atlas = ExtResource("11_qu0d1")
region = Rect2(270, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1mgp"]
atlas = ExtResource("11_qu0d1")
region = Rect2(360, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxjoa"]
atlas = ExtResource("11_qu0d1")
region = Rect2(450, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsfh7"]
atlas = ExtResource("11_qu0d1")
region = Rect2(270, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8x4m0"]
atlas = ExtResource("11_qu0d1")
region = Rect2(360, 0, 90, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ox063"]
atlas = ExtResource("11_qu0d1")
region = Rect2(450, 0, 90, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_7nrbs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xho7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bw08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sg0sd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6v8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6gu0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sr4wm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ks78l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vj27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_leecd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cich2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xv12")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uilfx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmpxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_080x1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4lq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1j1nh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vvae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2e1yn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tldu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aif77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkqj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvbyd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xyjp3")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [],
"loop": false,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_616ib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpecc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87bhp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8knud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imoji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2syoc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xe2n0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8qb6")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4cej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ooek5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ihds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63rc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsb36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wveln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m55n3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qp10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0p1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_03twl")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_15x5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0f4bk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lrdn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifsd4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrni1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6jpq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avvui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1mgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxjoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsfh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8x4m0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ox063")
}],
"loop": true,
"name": &"taunt",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qu0d1"]
size = Vector2(47, 62)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_15x5q"]
size = Vector2(193, 131.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0f4bk"]
size = Vector2(73, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5lrdn"]
size = Vector2(73, 31)

[node name="Golem" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 3
script = ExtResource("1_0elug")
mob = ExtResource("2_qu0d1")

[node name="OrcHealthBar UI" type="Node2D" parent="."]
z_index = 1

[node name="OrcHealthBar" type="ProgressBar" parent="OrcHealthBar UI"]
offset_left = -16.0
offset_top = -36.0
offset_right = 27.0
offset_bottom = -33.0
theme_override_styles/background = SubResource("StyleBoxFlat_55ma6")
theme_override_styles/fill = SubResource("StyleBoxFlat_7nrbs")
max_value = 200.0
value = 200.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="HealthIconEn" type="Sprite2D" parent="OrcHealthBar UI"]
position = Vector2(-17, -36)
texture = ExtResource("2_0f4bk")

[node name="HealthIconBar1" type="Sprite2D" parent="OrcHealthBar UI"]
position = Vector2(15, -34)
texture = ExtResource("3_5lrdn")

[node name="Orc State Machine" type="Node" parent="."]
script = ExtResource("4_xho7s")

[node name="GolemIdle" type="Node" parent="Orc State Machine"]
script = ExtResource("5_2bw08")

[node name="GolemAttack" type="Node" parent="Orc State Machine"]
script = ExtResource("7_0elug")

[node name="GolemChase" type="Node" parent="Orc State Machine"]
script = ExtResource("8_qu0d1")

[node name="GolemDeath" type="Node" parent="Orc State Machine"]
script = ExtResource("8_s6gu0")

[node name="GolemTaunt" type="Node" parent="Orc State Machine"]
script = ExtResource("10_ks78l")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, 0)
scale = Vector2(2.25, 2.58)
sprite_frames = SubResource("SpriteFrames_7nrbs")
animation = &"taunt"

[node name="Golem Body" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 52)
shape = SubResource("RectangleShape2D_qu0d1")

[node name="Detection Area" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Detection Area"]
position = Vector2(2, 65)
polygon = PackedVector2Array(-672, -175, -673, 14, -99, 20, -99, -19, -98, -115, 95, -115, 95, -14, 95, 19, 5, 19, 3.33333, 16.6667, -1.66667, 16.6667, -4, 19, -98, 19, -98, 21, 573, 26, 573, -168)

[node name="Attack Area" type="Area2D" parent="."]
position = Vector2(-2, 0)
collision_layer = 8

[node name="Attack Area Collision" type="CollisionShape2D" parent="Attack Area"]
position = Vector2(2, 16.75)
shape = SubResource("RectangleShape2D_15x5q")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("17_080x1")

[node name="AttackHitbox" type="Area2D" parent="."]
visible = false
monitorable = false

[node name="Attack Area Collision3" type="CollisionShape2D" parent="AttackHitbox"]
position = Vector2(59.5, 66)
shape = SubResource("RectangleShape2D_0f4bk")

[node name="Attack Area Collision4" type="CollisionShape2D" parent="AttackHitbox"]
position = Vector2(-60.5, 66.5)
shape = SubResource("RectangleShape2D_5lrdn")

[connection signal="frame_changed" from="AnimatedSprite2D" to="Orc State Machine/GolemAttack" method="_on_animated_sprite_2d_frame_changed"]
[connection signal="body_entered" from="AttackHitbox" to="Orc State Machine/GolemAttack" method="_on_attack_hitbox_body_entered"]
